Bugfixes last version